[gd_scene load_steps=19 format=3 uid="uid://cc8xisy120at5"]

[ext_resource type="Texture2D" uid="uid://e35nkwmrvq54" path="res://assets/boss1.png" id="1_dlmty"]
[ext_resource type="Script" uid="uid://bbccib840bsrh" path="res://scripts/boss.gd" id="1_neq0i"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dlmty"]
atlas = ExtResource("1_dlmty")
region = Rect2(2048, 0, 512, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_neq0i"]
atlas = ExtResource("1_dlmty")
region = Rect2(2560, 0, 512, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_jncid"]
atlas = ExtResource("1_dlmty")
region = Rect2(3072, 0, 512, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnbj4"]
atlas = ExtResource("1_dlmty")
region = Rect2(3584, 0, 512, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3bxh"]
atlas = ExtResource("1_dlmty")
region = Rect2(4096, 0, 512, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqpjq"]
atlas = ExtResource("1_dlmty")
region = Rect2(4608, 0, 512, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cdgk"]
atlas = ExtResource("1_dlmty")
region = Rect2(5120, 0, 512, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsl3t"]
atlas = ExtResource("1_dlmty")
region = Rect2(5632, 0, 512, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_0onds"]
atlas = ExtResource("1_dlmty")
region = Rect2(0, 0, 512, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfs1x"]
atlas = ExtResource("1_dlmty")
region = Rect2(512, 0, 512, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eiau"]
atlas = ExtResource("1_dlmty")
region = Rect2(1024, 0, 512, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_vn2fc"]
atlas = ExtResource("1_dlmty")
region = Rect2(1536, 0, 512, 384)

[sub_resource type="SpriteFrames" id="SpriteFrames_gqd3i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlmty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_neq0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jncid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnbj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3bxh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqpjq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cdgk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsl3t")
}],
"loop": false,
"name": &"downward_attack",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0onds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfs1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eiau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vn2fc")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}]

[sub_resource type="Animation" id="Animation_ho3mf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/CollisionPolygon2D:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(50, 132, 105, 173, 163, 187, 184, 158, 156, 131, 75, 105)]
}

[sub_resource type="Animation" id="Animation_mautr"]
resource_name = "downward_attack"
length = 1.0000067
loop_mode = 1
step = 0.06666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/CollisionPolygon2D:polygon")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.13356468, 0.20016204, 0.2663894, 0.33333334, 0.40023583, 0.46729106),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [PackedVector2Array(71, 66, 144, 58, 192, 26, 189, -13, 148, -8, 68, 28), PackedVector2Array(72, 68, 141, 62, 197, 29, 184, -6, 144, -7, 68, 31), PackedVector2Array(15, 28, 80, 18, 132, -15, 123, -48, 87, -49, 7, -10), PackedVector2Array(9, 21, 77, 9, 128, -18, 119, -53, 81, -53, 1, -16), PackedVector2Array(-63, -98, -49, -16, -13, -3, 34, -50, 99, -29, 68, -97, -11, -137, -47, -138), PackedVector2Array(-167, 193, -122, 188, -51, 139, -61, 23, -36, -30, 52, -110, 12, -110, -80, -76, -143, -15, -180, 129), PackedVector2Array(-110, 168, -70, 161, 0, 113, -8, 74, -69, 95, -122, 133)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7apjh"]
_data = {
&"RESET": SubResource("Animation_ho3mf"),
&"downward_attack": SubResource("Animation_mautr")
}

[node name="Boss" type="Node2D"]
script = ExtResource("1_neq0i")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gqd3i")
animation = &"downward_attack"
autoplay = "idle"
frame = 7

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(50, 132, 105, 173, 163, 187, 184, 158, 156, 131, 75, 105)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7apjh")
}

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
